@@ -1,7 +1,7 @@
 # ----------------------------------------------------------------------------
 #  listbox.tcl
 #  This file is part of Unifix BWidget Toolkit
-#  $Id: listbox.tcl,v 1.29.2.1 2010/05/12 07:59:34 oehhar Exp $
+#  $Id: listbox.tcl,v 1.29.2.2 2010/05/12 08:07:39 oehhar Exp $
 # ----------------------------------------------------------------------------
 #  Index of commands:
 #     - ListBox::create
@@ -728,8 +728,10 @@ proc ListBox::see { path item } {
     }
     set idn [$path.c find withtag n:$item]
     if { $idn != "" } {
+        set idi [$path.c find withtag i:$item]
+        if { $idi == "" } { set idi $idn }
         ListBox::_see $path $idn right
-        ListBox::_see $path $idn left
+        ListBox::_see $path $idi left
     }
 }
 
